# python-bshlib

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
lib/: definitions.py
lib/bshlib/: output_mgr.py  utils.py
src/bshlib/: singleton.py  suffix_mgr.py
util/: check-msg.sh  clear-msg.sh  confirm.sh  post-commit.sh  pre-commit.sh  up-version.sh  up_version.sh
