[build-system]
requires = ["setuptools", "wheel", "setuptools-scm == 8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "bshlib"
description="Bashiron's personal utilities."
readme = "README.md"
authors = [{name = "bashiron", email = "bioshiron@gmail.com"}]
requires-python = ">= 3.11"
keywords = ["utility"]
dynamic = ["version"]
dependencies = [
    'pandas == 2.0.1',
    'more-itertools == 9.0.0',
    'loguru == 0.7.2',
    'opencv-python == 4.7.0.72'
]

[tool.setuptools_scm]
version_file = "lib/bshlib/_version.py"
